--- a/frontend/src/pages/chatPage/ChatPage.module.scss
+++ b/frontend/src/pages/chatPage/ChatPage.module.scss
@@ -75,6 +75,9 @@
 .input {
 	background-color:#9BA4B5 ;
 		border-radius: 20px;
+		justify-content: center;
+		align-items: center;
+		margin: 0 auto;
 
 	input{
 		background-color: #9BA4B5;
@@ -89,6 +92,7 @@
 		height: 44px;
 		margin-right: 10px;
 		border: none;
+
 	}
 }
 
