--- a/frontend/src/pages/chatPage/ChatPage.module.scss
+++ b/frontend/src/pages/chatPage/ChatPage.module.scss
@@ -83,7 +83,7 @@
 	}
 	button {
 		background-color: #394867;
-		color: white;
+		color: black;
 		border-radius: 20px;
 		width: 163px;
 		height: 44px;
