--- a/frontend/src/pages/singin/Singin.css
+++ b/frontend/src/pages/singin/Singin.css
@@ -162,7 +162,7 @@ a {
 	border-radius: 20px;
 	border: 1px solid #212A3E;
 	background-color: #212A3E;
-	color: #ffffff;
+	color: black;
 	font-size: 12px;
 	font-weight: bold;
 	padding: 12px 45px;
