--- a/frontend/src/component/modalMessage/ModalMessage.css
+++ b/frontend/src/component/modalMessage/ModalMessage.css
@@ -1,45 +1,41 @@
-/* ModalMessage.css */
-
 .modalOverlay {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Півпрозорий чорний фон */
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* Вище інших елементів на сторінці */
-}
-
-.modalContent {
-    background-color: #fff;
-    border-radius: 8px;
+  }
+  
+  .modalContent {
+    background: #fff;
     padding: 20px;
-    max-width: 80%;
-    max-height: 80%;
+    border-radius: 8px;
+    width: 400px;
+    max-height: 80vh;
     overflow-y: auto;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    position: relative;
-}
-
-.closeButton {
-    position: absolute;
+  }
+  
+  .closeButton {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
     top: 10px;
     right: 10px;
-    cursor: pointer;
-    font-size: 24px;
-    color: #333;
-}
-
-.closeButton:hover {
-    color: #000;
-}
-
-.modalContent p {
-    font-size: 16px;
-    line-height: 1.5;
-    color: #333;
-    margin-bottom: 20px;
-}
+  }
+  
+  .messagesList {
+    margin-top: 10px;
+  }
+  
+  .messageItem {
+    background: #f5f5f5;
+    padding: 10px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+  }
+  
