--- a/frontend/src/component/carModel/CarModal.module.scss
+++ b/frontend/src/component/carModel/CarModal.module.scss
@@ -12,7 +12,8 @@
   }
   
   .modalContent {
-    background-color: #fff;
+    background-color: #394867;
+    color: white;
     width: 90%;
     max-width: 600px;
     border-radius: 10px;
@@ -41,8 +42,8 @@
   
   h2 {
     text-align: center;
+    color: white;
     margin-bottom: 20px;
-    color: #333;
     font-size: 1.5rem;
   }
   
