--- a/frontend/src/component/soldModal/SoldModal.module.scss
+++ b/frontend/src/component/soldModal/SoldModal.module.scss
@@ -31,10 +31,10 @@
 
 
 .closeBtn {
-    background: none;
+    background: gray;
     border: none;
     font-size: 18px;
-    color: #f00;
+    color: rgb(0, 0, 0);
     cursor: pointer;
     position: absolute;
     top: 10px;
