--- a/frontend/src/component/soldModal/SoldModal.module.scss
+++ b/frontend/src/component/soldModal/SoldModal.module.scss
@@ -69,7 +69,7 @@
 
 .markSoldBtn {
     background-color: #007bff;
-    color: #fff;
+    color: #000000;
     padding: 5px 10px;
     border: none;
     border-radius: 4px;
